# zkbot

./: .env  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  main.py  mypy.ini  project_plan.md  pyproject.toml  pyrightconfig.json  ruff.toml
libs/zk-datamodel/: pyproject.toml
libs/zk-gw-utils/: pyproject.toml
python/libs/zk-client/: pyproject.toml
python/libs/zk-core/: pyproject.toml
python/libs/zk-rpc/: pyproject.toml
python/proto-betterproto/: pyproject.toml
python/proto-betterproto/tests/: test_wheel_contract.py
python/proto-pb/: pyproject.toml
python/tools/: pyproject.toml
python/tools/src/zk_tools/: loc_count.py  test_rtmd.py  trade_doctor.py
rust/: Cargo.toml
rust/crates/zk-backtest-rs/: Cargo.toml
rust/crates/zk-backtest-rs/benches/: backtest_throughput.rs
rust/crates/zk-backtest-rs/src/: backtest_oms.rs  backtester.rs  event_queue.rs  lib.rs  match_policy.rs  models.rs  simulator.rs  testutils.rs
rust/crates/zk-backtest-rs/tests/: backtest_parity.rs  testutils_smoke.rs
rust/crates/zk-core-rs/: Cargo.toml
rust/crates/zk-core-rs/src/: clock.rs  lib.rs  scheduler.rs  sim_clock.rs  test_clock.rs  types.rs
rust/crates/zk-core-rs/tests/: clock_tests.rs
rust/crates/zk-datamodel-rs/src/: lib.rs
rust/crates/zk-domain-rs/: Cargo.toml
rust/crates/zk-domain-rs/src/: lib.rs
rust/crates/zk-engine-rs/: Cargo.toml
rust/crates/zk-engine-rs/src/: action_dispatcher.rs  engine_event.rs  latency.rs  lib.rs  live_engine.rs  snapshot.rs
rust/crates/zk-engine-rs/tests/: engine_parity.rs
rust/crates/zk-engine-svc/: Cargo.toml  build.rs
rust/crates/zk-engine-svc/src/: bootstrap.rs  config.rs  control_api.rs  dispatcher.rs  lib.rs  main.rs  query_api.rs  rehydration.rs  runtime.rs  subscriptions.rs  supervision.rs
rust/crates/zk-engine-svc/tests/: grace_queue.rs
rust/crates/zk-gw-svc/: Cargo.toml  build.rs
rust/crates/zk-gw-svc/src/: config.rs  grpc_handler.rs  gw_executor.rs  lib.rs  main.rs  nats_publisher.rs  proto.rs  reconnect.rs  semantic_pipeline.rs  venue_adapter.rs
rust/crates/zk-gw-svc/tests/: bootstrap_config.rs  gw_exec_tests.rs
rust/crates/zk-gw-types/: Cargo.toml
rust/crates/zk-gw-types/src/: lib.rs
rust/crates/zk-infra-rs/: Cargo.toml
rust/crates/zk-infra-rs/src/: bootstrap.rs  config.rs  config_mgmt.rs  discovery_registration.rs  grpc.rs  lib.rs  mongo.rs  nats.rs  nats_js.rs  nats_kv.rs  nats_kv_discovery.rs  pg.rs  redis.rs  service_registry.rs  tracing.rs  vault.rs
rust/crates/zk-infra-rs/tests/: integration.rs
rust/crates/zk-mock-gw/: Cargo.toml  build.rs
rust/crates/zk-mock-gw/src/: fill.rs  gateway.rs  main.rs  proto.rs  state.rs  zk_gateway.rs
rust/crates/zk-oms-rs/: Cargo.toml
rust/crates/zk-oms-rs/benches/: oms_latency.rs  oms_v2_latency.rs
rust/crates/zk-oms-rs/src/: balance_mgr.rs  balance_v2.rs  config.rs  intern_v2.rs  lib.rs  metadata_v2.rs  models.rs  models_v2.rs  oms_core.rs  oms_core_v2.rs  order_mgr.rs  order_store_v2.rs  position_mgr.rs  position_v2.rs  reservation_mgr.rs  reservation_v2.rs  snapshot.rs  snapshot_v2.rs  utils.rs  validation.rs
rust/crates/zk-oms-rs/tests/: oms_parity.rs
rust/crates/zk-oms-svc/: Cargo.toml  build.rs
rust/crates/zk-oms-svc/benches/: oms_svc_latency.rs
rust/crates/zk-proto-rs/: Cargo.toml  build.rs
rust/crates/zk-pyo3-bridge/: Cargo.toml
rust/crates/zk-pyo3-rs/: Cargo.toml  pyproject.toml
rust/crates/zk-recorder-svc/: Cargo.toml
rust/crates/zk-rtmd-gw-svc/: Cargo.toml  build.rs
rust/crates/zk-rtmd-rs/: Cargo.toml
rust/crates/zk-sim-core/: Cargo.toml
rust/crates/zk-strategy-host-rs/: Cargo.toml
rust/crates/zk-strategy-sdk-rs/: Cargo.toml
rust/crates/zk-trade-tools/: Cargo.toml  README.md
rust/crates/zk-trading-sdk-rs/: Cargo.toml  build.rs
rust/strategies/arbi/: Cargo.toml
rust/strategies/mm/: Cargo.toml
rust/strategies/noop/: Cargo.toml
rust/strategies/strategy-smoke-test/: Cargo.toml
services/zk-gw-okx/: pyproject.toml
services/zk-pilot/: pyproject.toml
services/zk-pilot/tests/: test_bootstrap.py  test_db.py
services/zk-refdata-svc/: pyproject.toml
services/zk-refdata-svc/tests/: test_config_loader.py  test_config_model.py  test_lifecycle_diff.py  test_normalize.py  test_registry.py  test_service.py  test_venue_registry.py
venue-integrations/ibkr/: manifest.yaml  pyproject.toml
venue-integrations/ibkr/ibkr/: __init__.py  config.py  gw.py  ibkr_client.py  ibkr_contracts.py  ibkr_normalize.py  id_map.py  rate_limiter.py  refdata.py  rtmd.py  types.py
venue-integrations/ibkr/python/: gw.py  rtmd.py
venue-integrations/ibkr/schemas/: gw_config.schema.json  refdata_config.schema.json  rtmd_config.schema.json
venue-integrations/ibkr/scripts/: smoke_test.py
venue-integrations/ibkr/tests/: conftest.py  test_config.py  test_connection.py  test_contract_translator.py  test_event_router.py  test_gw_adaptor.py  test_id_map.py  test_live_harness.py  test_live_rtmd.py  test_rate_limiter.py  test_refdata.py  test_resolver_explicit.py  test_resolver_nasdaq.py  test_rtmd.py
venue-integrations/oanda/: manifest.yaml  pyproject.toml
venue-integrations/oanda/oanda/: client.py  gw.py  normalize.py  oanda_client.py  oanda_normalize.py  oanda_pricing_stream.py  oanda_stream.py  pricing_stream.py  refdata.py  rtmd.py  stream.py
venue-integrations/oanda/python/: gw.py
venue-integrations/oanda/schemas/: gw_config.schema.json  refdata_config.schema.json  rtmd_config.schema.json
venue-integrations/oanda/tests/: conftest.py  test_client.py  test_gw.py  test_gw_health.py  test_live_harness.py  test_live_refdata.py  test_live_rtmd.py  test_normalize.py  test_normalize_rtmd.py  test_oanda_adaptor.py  test_oanda_client.py  test_refdata_loader.py  test_rtmd.py  test_rtmd_adaptor.py
venue-integrations/okx/: manifest.yaml  pyproject.toml
venue-integrations/okx/okx/: refdata.py
venue-integrations/okx/python/: refdata.py
venue-integrations/okx/rust/: Cargo.toml  gw.rs  rtmd.rs
venue-integrations/okx/schemas/: gw_config.schema.json  refdata_config.schema.json  rtmd_config.schema.json
(+1005 files in other folders)
