[project]
name = "zkbot"
version = "0.1.0"
description = "zkbot workspace root (see python/, rust/, java/)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[dependency-groups]
# tools only needed to (re)generate code
"dev" = [
  "grpcio-tools>=1.60",
  "betterproto[compiler]>=2.0.0b6",  # provides protoc-gen-python_betterproto
  "build",
  "twine"
]

[tool.uv.workspace]
members = [
  "python/libs/*",
  "python/services/*",
  "python/proto-pb",
  "python/proto-betterproto",
  "python/tools",
  "venue-integrations/oanda",
  "venue-integrations/ibkr",
]
exclude = [
  "venue-integrations/legacy",
  "python/legacy",
]

# Local workspace sources for development
# Allows packages to depend on each other and resolve locally
[tool.uv.sources]
zk-core = { workspace = true }
zk-client = { workspace = true }
zk-rpc = { workspace = true }
gw-utils = { workspace = true }
zk-proto-pb = { workspace = true }
zk-proto-betterproto = { workspace = true }
zk-tools = { workspace = true }
