[project]
name = "zkbot"
version = "0.1.0"
description = "zkbot workspace root (see python/, rust/, java/)"
readme = "README.md"
requires-python = ">=3.13"
# Root deps pull packages into `.venv` that embedded-Python runtimes need but
# aren't otherwise reachable from a single workspace member's deps. See
# docs/system-arch/dependency-contract.md.
dependencies = [
  "zk-strategylib",
]


[dependency-groups]
# tools only needed to (re)generate code
"dev" = [
  "grpcio-tools>=1.60",
  "betterproto[compiler]>=2.0.0b6",  # provides protoc-gen-python_betterproto
  "build",
  "twine"
]

[tool.uv.workspace]
members = [
  "python/libs/*",
  "python/services/*",
  "python/proto-pb",
  "python/proto-betterproto",
  "python/tools",
  "venue-integrations/oanda",
  "venue-integrations/ibkr",
  "venue-integrations/okx",
]
exclude = [
  "venue-integrations/legacy",
  "python/legacy",
]

# Local workspace sources for development
# Allows packages to depend on each other and resolve locally
[tool.uv.sources]
zk-core = { workspace = true }
zk-client = { workspace = true }
zk-rpc = { workspace = true }
gw-utils = { workspace = true }
zk-proto-pb = { workspace = true }
zk-proto-betterproto = { workspace = true }
zk-tools = { workspace = true }
zk-gw-oanda = { workspace = true }
zk-venue-ibkr = { workspace = true }
zk-venue-okx = { workspace = true }
# PyO3 native extension: built via maturin PEP 517 backend on `uv sync`,
# installed as a versioned wheel into the active venv. Python-visible module is `zk_backtest`.
zk-backtest = { path = "rust/crates/zk-pyo3-rs" }
# Research strategy package lives outside this repo; added as an editable source so
# embedded-Python hosts can `importlib.import_module("zk_strategylib.…")` without
# PYTHONPATH tricks. See docs/system-arch/dependency-contract.md.
zk-strategylib = { path = "../zkstrategy_research/zk-strategylib", editable = true }
