[workspace]
members = [
    "crates/zk-proto-rs",
    "crates/zk-domain-rs",
    "crates/zk-oms-rs",
    "crates/zk-engine-rs",
    "crates/zk-backtest-rs",
    "crates/zk-strategy-sdk-rs",
    "crates/zk-infra-rs",
    "crates/zk-pyo3-rs",
    "crates/zk-mock-gw",
]
resolver = "2"

[workspace.dependencies]
prost = "0.13"
tracing = "0.1"
thiserror = "2"
