[workspace]
members = [
    "crates/zk-proto-rs",
    "crates/zk-domain-rs",
    "crates/zk-oms-rs",
    "crates/zk-engine-rs",
    "crates/zk-backtest-rs",
    "crates/zk-sim-core",
    "crates/zk-strategy-sdk-rs",
    "crates/zk-infra-rs",
    "crates/zk-pyo3-rs",
    "crates/zk-mock-gw",
    "crates/zk-oms-svc",
    "crates/zk-gw-svc",
    "crates/zk-trading-sdk-rs",
    "crates/zk-trade-tools",
    "crates/zk-engine-svc",
    "crates/zk-strategy-host-rs",
    "strategies/noop",
    "strategies/strategy-smoke-test",
    "strategies/mm",
    "strategies/arbi",
]
resolver = "2"

[workspace.dependencies]
prost = "0.13"
tracing = "0.1"
thiserror = "2"
