[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "zk-datamodel"
version = "0.1.0"
description = "ZK protobuf datamodel (generated code + helpers)"
requires-python = ">=3.10"
dependencies = [
    "betterproto[grpclib]>=2.0.0b6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build]
include = ["src/zk_datamodel/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/zk_datamodel"]
