[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "gw-utils"
version = "0.1.0"
description = "Gateway utility helpers"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build]
include = ["src/gw_utils/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/gw_utils"]
