[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "okx-gw"
version = "0.1.0"
description = "OKX gateway using zk-rpc + zk-datamodel"
requires-python = ">=3.10"
dependencies = [
    "zk-rpc>=0.1.0",
    "zk-datamodel>=0.1.0",
    "gw-utils>=0.1.0",
    "loguru>=0.7",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build]
include = ["src/okx_gw/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/okx_gw"]
