[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "zk-venue-ibkr"
version = "0.1.0"
description = "IBKR venue integration for zkbot"
requires-python = ">=3.11"
dependencies = [
    "ib_async>=1.0.0",
    "protobuf>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["ibkr"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires live TWS/IB Gateway connection",
]
