[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "zk-gw-oanda"
version = "0.1.0"
description = "OANDA venue adaptor — Python adaptor for zk-gw-svc via zk-pyo3-bridge"
requires-python = ">=3.11"
dependencies = [
    "protobuf>=6.32.0",
    "httpx>=0.27",
    "loguru>=0.7",
    "zk-proto-pb",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.35",
]

[tool.hatch.build.targets.wheel]
packages = ["oanda"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "grpcio-tools>=1.78.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.35",
]
