[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "zk-venue-okx"
version = "0.1.0"
description = "OKX venue adaptor — refdata loader and gateway stubs"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["okx"]
