[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "zk-client"
version = "0.1.0"
description = "Client library for interacting with zkbot services."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "zk-proto-betterproto>=0.1.0",
    "loguru>=0.7",
    "nats-py>=2.6",
    "httpx>=0.27",
    "snowflake-id>=1.0",
    "betterproto>=2.0.0b6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build]
include = ["src/zk_client/**", "src/tqclient/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/zk_client", "src/tqclient"]
