[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "zk-core"
version = "0.1.0"
description = "Trading engine core (Python impl, Rust-ready)"
requires-python = ">=3.10"
dependencies = [
    "zk-proto-betterproto>=0.1.0",
    "loguru>=0.7",
    "pandas>=2.0",
    "numpy>=1.24",
    "orjson>=3.10",
    "croniter>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build]
include = [
    "src/zk_core/**",
    "src/zk_oms/**",
    "src/zk_strategy/**",
    "src/zk_analytics/**",
    "src/zk_simulator/**",
    "src/zk_utils/**",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/zk_core",
    "src/zk_oms",
    "src/zk_strategy",
    "src/zk_analytics",
    "src/zk_simulator",
    "src/zk_utils",
]
