[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "zk-rpc"
version = "0.1.0"
description = "NATS-based RPC abstraction"
requires-python = ">=3.10"
dependencies = [
    "zk-proto-betterproto>=0.1.0",
    "nats-py>=2.6",
    "msgpack>=1.0",
    "loguru>=0.7",
    "betterproto>=2.0.0b6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build]
include = ["src/zk_rpc/**", "src/tqrpc_utils/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/zk_rpc", "src/tqrpc_utils"]
