[package]
name = "zk-gw-svc"
version = "0.1.0"
edition = "2021"
description = "Production trading gateway service with pluggable venue adapters"

[lib]
name = "zk_gw_svc"
path = "src/lib.rs"

[[bin]]
name = "zk-gw-svc"
path = "src/main.rs"

[dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# gRPC
tonic = "0.12"
prost = "0.13"

# NATS
async-nats = "0.37"

# byte buffers
bytes = "1"

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# errors
thiserror = "2"
anyhow = "1"

# async trait
async-trait = "0.1"

# uuid for error_id generation
uuid = { version = "1", features = ["v4"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP + WebSocket clients (OKX and future venues)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# crypto (OKX HMAC-SHA256 signing)
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# rate limiting
governor = "0.8"

# concurrent maps
dashmap = "6"

# URL parsing
url = "2"

# infra + domain + simulation
zk-proto-rs = { path = "../zk-proto-rs" }
zk-infra-rs = { path = "../zk-infra-rs" }
zk-sim-core = { path = "../zk-sim-core" }
zk-gw-types = { path = "../zk-gw-types" }
zk-venue-okx = { path = "../../../venue-integrations/okx/rust" }

# optional: Python venue bridge
zk-pyo3-bridge = { path = "../zk-pyo3-bridge", optional = true }

[features]
python-venue = ["dep:zk-pyo3-bridge"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[build-dependencies]
tonic-build = "0.12"
