[package]
name = "zk-mock-gw"
version = "0.1.0"
edition = "2021"
description = "Mock trading gateway simulator for integration testing"

[[bin]]
name = "zk-mock-gw"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
async-nats = "0.37"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"

[build-dependencies]
tonic-build = "0.12"
