[package]
name = "zk-oms-rs"
version = "0.1.0"
edition = "2021"
description = "OMS state machine, order routing, balance tracking, and reconciliation for zkbot"

[features]
# Enable the read-replica mechanism (ArcSwap<OmsSnapshot>) for live trading.
# Not needed during backtesting — keeps im::HashMap out of the dependency tree.
replica = ["dep:im"]

[dependencies]
zk-proto-rs = { path = "../zk-proto-rs" }
zk-domain-rs = { path = "../zk-domain-rs" }
tracing = "0.1"
thiserror = "2"
im = { version = "15", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "oms_latency"
harness = false
