[package]
name = "zk-pyo3-bridge"
version = "0.1.0"
edition = "2021"
description = "Shared PyO3 bridge for loading Python venue adaptor modules"

[dependencies]
pyo3 = { version = "0.22", features = ["auto-initialize"] }
pythonize = "0.22"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
anyhow = "1"
prost = "0.13"
jsonschema = "0.28"
zk-gw-types = { path = "../zk-gw-types" }
zk-rtmd-rs = { path = "../zk-rtmd-rs" }
zk-proto-rs = { path = "../zk-proto-rs" }

[[bin]]
name = "refdata-stub"
path = "src/bin/refdata_stub.rs"
