[package]
name = "zk-rtmd-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
zk-proto-rs = { path = "../zk-proto-rs" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
